--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@angular/platform-browser-dynamic": "12.0.0",
     "@angular/router": "12.0.0",
     "@emailjs/browser": "^3.4.0",
+    "@fortawesome/angular-fontawesome": "^0.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngrx/effects": "^12.5.1",
     "@ngrx/entity": "^12.5.1",
@@ -34,9 +38,13 @@
     "@ngrx/store-devtools": "^12.5.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@popperjs/core": "^2.11.0",
+    "add": "^2.0.6",
+    "angular-material": "^1.2.5",
     "angular-owl-carousel": "^1.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "core-js": "^3.19.1",
     "emailjs": "^3.8.0",
     "emailjs-com": "^3.2.0",
@@ -52,6 +60,7 @@
     "ngx-img-zoom": "^4.1.2",
     "ngx-lightbox": "^2.5.1",
     "ngx-owl-carousel-o": "^7.0.1",
+    "ngx-sharebuttons": "^9.0.0",
     "ngx-toastr": "^14.1.4",
     "nouislider": "^15.5.0",
     "popper.js": "^1.16.1",
@@ -63,14 +72,7 @@
     "tslib": "^2.3.1",
     "web-animations-js": "^2.3.2",
     "webpack": "5.36.2",
-    "zone.js": "0.11.4",
-    "@fortawesome/angular-fontawesome": "^0.10.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@popperjs/core": "^2.11.0",
-    "bootstrap-icons": "^1.7.2",
-    "ngx-sharebuttons": "^9.0.0"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.0.0",
