added spin wheel module in popup

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ngx-owl-carousel-o": "^7.0.1",
     "ngx-sharebuttons": "^9.0.0",
     "ngx-toastr": "^14.1.4",
+    "ngx-wheel": "^4.0.5",
     "nouislider": "^15.5.0",
     "popper.js": "^1.16.1",
     "rxjs": "^7.4.0",
